--- a/pokemon/package.json
+++ b/pokemon/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.19",
     "axios": "^0.23.0",
+    "material-icons": "^1.9.1",
     "mui-datatables": "^3.7.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
